# unattached-volumes

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  master  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yaml  linting.yml  testing.yml
scripts/: semgrep.sh  shellcheck.sh
tests/: unattached_volumes_tests.py
unattached_volumes/: unattached_volumes.py
