[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=42",
    "wheel"
]

[project]
readme = "README.md"

[tool.poetry]
name = "aws-unattached-volumes"
version = "0.1.0"
description = "Simple utility script for managing unattached EBS volumes on AWS using Python and boto3"
authors = ["Pedro Garcia Rodriguez <me@pgarcia.dev>"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.50"
click = "^8.1.7"
